# hr-predictor

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DEPLOY.md  MASTER_PLAN.md  README.md  abstract.md  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_drop_games_team_fks.py  0003_operational_tables.py  0004_feature_store.py  0005_weather_archive.py  0006_predictions.py  0007_odds_snapshots.py  0008_team_bullpen_features.py
phases/phase0/: ACCEPTANCE.md  NOTES.md  PROMPT.md
phases/phase1/: ACCEPTANCE.md  NOTES.md  PROMPT.md
phases/phase2/: ACCEPTANCE.md  NOTES.md  PLAN.md  PROMPT.md
phases/phase3/: ACCEPTANCE.md  NOTES.md  PLAN.md  PROMPT.md  backfill_runner.py  batting_order_backfill.py  pulled_fb_backfill.py  weather_archive_runner.py
phases/phase4/: ACCEPTANCE.md  NOTES.md  PLAN.md  PROMPT.md  RESULTS.md
phases/phase5/: ACCEPTANCE.md  NOTES.md  PROMPT.md  RESULTS.md  calibrate_runner.py  sanity_runner.py
phases/phase6/: ACCEPTANCE.md  NOTES.md  PROMPT.md  RESULTS.md  option3_diff.py  option3_feature_importance.py  option3_promote.py  option3_sweep.py
phases/phase7/: ACCEPTANCE.md  NOTES.md  PROMPT.md
phases/phase8/: PROMPT.md
scripts/: refresh-picks.sh
src/agents/: overview.md
src/api/: cache.py  dependencies.py  errors.py  main.py  overview.md
src/core/: config.py  db.py  logging_config.py  models.py  overview.md  redis_client.py  time.py
src/features/: batter_rolling.py  batter_splits.py  batter_tracking.py  builder.py  bullpen.py  context.py  overview.md  park_factors_features.py  pitcher_pitch_mix.py  pitcher_profile.py  team_bullpen.py  weather_physics.py
src/ingestion/: audit.py  daily_runner.py  mlb_statsapi.py  mlb_statsapi_client.py  overview.md  park_factors.py  parks.py  prop_line_client.py  prop_line_odds.py  scheduler.py  statcast_backfill.py  statcast_incremental.py  teams.py  weather.py  (+3 more)
tests/: conftest.py  test_core.py  test_infra.py
ui/: .gitignore  overview.md  package-lock.json  package.json
(+152 files in other folders)
