[project]
name = "hr-predictor"
version = "0.1.0"
description = "Per-game MLB home-run probability predictor for prop-betting decision support."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "sqlalchemy>=2.0,<3",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "redis>=5.0",
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "requests-cache>=1.2",
    "pybaseball>=2.2",
    "MLB-StatsAPI>=1.7",
    "pandas>=2.2",
    "numpy>=1.26,<2",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "scikit-learn>=1.4",
    "shap>=0.44",
    "apscheduler>=3.10",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "vcrpy>=6.0",
    "ruff>=0.4",
    "black>=24.0",
    "pre-commit>=3.6",
    "ipython>=8.0",
    "asgi-lifespan>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/core", "src/ingestion", "src/features", "src/models", "src/api", "src/agents"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N803", "N806"]
# `Session_` is idiomatic for SQLAlchemy sessionmaker instances.
"src/ingestion/statcast_backfill.py" = ["N806", "N803"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
    "--strict-markers",
]
markers = [
    "integration: requires docker-compose services running",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
